--- a/style.css
+++ b/style.css
@@ -14,3 +14,21 @@ h1:hover {
   transition: all 0.3s;
   cursor: default;
 }
+.center {
+  z-index: 1;
+  position: absolute;
+  margin: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+html {
+  background: #141414;
+  font-family: Roboto Slab
+}
+.focused::-webkit-slider-thumb {
+  box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.15)
+}
+.clicked::-webkit-slider-thumb {
+  -webkit-transform: scale(1.5)
+}
